# sitescan-ui

./: LICENSE  Makefile  README.md  pyproject.toml
app/: app.py  db.py  settings.py
app/core/entities/: scan.py  user.py
app/core/use_cases/: auth.py  scan.py
app/database/: database_connection.py
app/repositories/: scan.py  user.py
app/sql/: scan.py  user.py
app/utils/: hashing.py
app/web/forms/: login_form.py
app/web/routes/: __init__.py  auth.py
app/web/templates/auth/: login_page.html
app/web/templates/layouts/: base.html
tests/repositories/: test_scan_repository.py  test_user_repository.py
tests/routes/: test_auth_routes.py
tests/use_cases/: test_auth.py  test_scan_usecases.py
