[project]
name = "sitescan-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "carlosmab",email = "carlosm.araujob@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "quart (>=0.18.0,<0.19.0)",
    "quart-wtf (>=0.0.1,<0.0.2)",
    "werkzeug (<2.3)",
    "quart-auth (>=0.11.0,<0.12.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
